--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import tensorflow as tf\n",
-    "# tatiana"
+    "# tatiana la mejor"
    ]
   },
   {
