--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,322 +286,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[[0.89803922],\n",
-       "         [0.92156863],\n",
-       "         [0.91764706],\n",
+       "array([[[[0.00215302],\n",
+       "         [0.00213764],\n",
+       "         [0.00215302],\n",
        "         ...,\n",
-       "         [0.88235294],\n",
-       "         [0.86666667],\n",
-       "         [0.85490196]],\n",
+       "         [0.00272203],\n",
+       "         [0.00256824],\n",
+       "         [0.002599  ]],\n",
        "\n",
-       "        [[0.90588235],\n",
-       "         [0.90196078],\n",
-       "         [0.92156863],\n",
+       "        [[0.00215302],\n",
+       "         [0.00213764],\n",
+       "         [0.00215302],\n",
        "         ...,\n",
-       "         [0.8745098 ],\n",
-       "         [0.88235294],\n",
-       "         [0.85490196]],\n",
+       "         [0.00261438],\n",
+       "         [0.00246059],\n",
+       "         [0.002599  ]],\n",
        "\n",
-       "        [[0.89411765],\n",
-       "         [0.90980392],\n",
-       "         [0.91764706],\n",
+       "        [[0.00215302],\n",
+       "         [0.00213764],\n",
+       "         [0.00215302],\n",
        "         ...,\n",
-       "         [0.89019608],\n",
-       "         [0.85882353],\n",
-       "         [0.85098039]],\n",
+       "         [0.00247597],\n",
+       "         [0.00169166],\n",
+       "         [0.00183007]],\n",
        "\n",
        "        ...,\n",
        "\n",
-       "        [[0.9372549 ],\n",
-       "         [0.9372549 ],\n",
-       "         [0.92941176],\n",
+       "        [[0.00215302],\n",
+       "         [0.00213764],\n",
+       "         [0.00213764],\n",
        "         ...,\n",
-       "         [0.79215686],\n",
-       "         [0.78823529],\n",
-       "         [0.77254902]],\n",
+       "         [0.00247597],\n",
+       "         [0.00249135],\n",
+       "         [0.00249135]],\n",
        "\n",
-       "        [[0.93333333],\n",
-       "         [0.9254902 ],\n",
-       "         [0.9254902 ],\n",
+       "        [[0.00213764],\n",
+       "         [0.00213764],\n",
+       "         [0.00213764],\n",
        "         ...,\n",
-       "         [0.78431373],\n",
-       "         [0.78431373],\n",
-       "         [0.75294118]],\n",
+       "         [0.00249135],\n",
+       "         [0.00249135],\n",
+       "         [0.00250673]],\n",
        "\n",
-       "        [[0.92941176],\n",
-       "         [0.90980392],\n",
-       "         [0.92156863],\n",
+       "        [[0.00212226],\n",
+       "         [0.00213764],\n",
+       "         [0.00215302],\n",
        "         ...,\n",
-       "         [0.8       ],\n",
-       "         [0.78823529],\n",
-       "         [0.78431373]]],\n",
+       "         [0.00249135],\n",
+       "         [0.00250673],\n",
+       "         [0.00252211]]],\n",
        "\n",
        "\n",
-       "       [[[0.23921569],\n",
-       "         [0.23529412],\n",
-       "         [0.23921569],\n",
+       "       [[[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.3372549 ],\n",
-       "         [0.34509804],\n",
-       "         [0.34901961]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[0.28235294],\n",
-       "         [0.42745098],\n",
-       "         [0.56470588],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.29019608],\n",
-       "         [0.28627451],\n",
-       "         [0.29803922]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[0.23921569],\n",
-       "         [0.44705882],\n",
-       "         [0.56470588],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.23529412],\n",
-       "         [0.23529412],\n",
-       "         [0.23529412]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
        "        ...,\n",
        "\n",
-       "        [[0.24313725],\n",
-       "         [0.14509804],\n",
-       "         [0.21960784],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.90196078],\n",
-       "         [0.94117647],\n",
-       "         [0.30980392]],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157]],\n",
        "\n",
-       "        [[0.43921569],\n",
-       "         [0.31372549],\n",
-       "         [0.34509804],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.95686275],\n",
-       "         [0.54509804],\n",
-       "         [0.23529412]],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157]],\n",
        "\n",
-       "        [[0.55686275],\n",
-       "         [0.50196078],\n",
-       "         [0.48235294],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.5372549 ],\n",
-       "         [0.41960784],\n",
-       "         [0.28627451]]],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157]]],\n",
        "\n",
        "\n",
-       "       [[[0.58431373],\n",
-       "         [0.58823529],\n",
-       "         [0.58431373],\n",
+       "       [[[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.76470588],\n",
-       "         [0.75294118],\n",
-       "         [0.76470588]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[0.58039216],\n",
-       "         [0.57254902],\n",
-       "         [0.58039216],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.76862745],\n",
-       "         [0.76862745],\n",
-       "         [0.76862745]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[0.58431373],\n",
-       "         [0.56470588],\n",
-       "         [0.56470588],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.76470588],\n",
-       "         [0.74901961],\n",
-       "         [0.76078431]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
        "        ...,\n",
        "\n",
-       "        [[0.8       ],\n",
-       "         [0.79607843],\n",
-       "         [0.8       ],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.80392157],\n",
-       "         [0.80392157],\n",
-       "         [0.79607843]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[0.79607843],\n",
-       "         [0.78823529],\n",
-       "         [0.80392157],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.80784314],\n",
-       "         [0.80784314],\n",
-       "         [0.80784314]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[0.79215686],\n",
-       "         [0.80392157],\n",
-       "         [0.78823529],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [0.80392157],\n",
-       "         [0.8       ],\n",
-       "         [0.80392157]]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]]],\n",
        "\n",
        "\n",
        "       ...,\n",
        "\n",
        "\n",
-       "       [[[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "       [[[0.00352172],\n",
+       "         [0.00347559],\n",
+       "         [0.00341407],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.00352172],\n",
+       "         [0.00347559],\n",
+       "         [0.00342945],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.00352172],\n",
+       "         [0.00347559],\n",
+       "         [0.00342945],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
        "        ...,\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]]],\n",
        "\n",
        "\n",
-       "       [[[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "       [[[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
        "        ...,\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]]],\n",
+       "         [0.        ],\n",
+       "         [0.        ],\n",
+       "         [0.        ]]],\n",
        "\n",
        "\n",
-       "       [[[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "       [[[0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157]],\n",
        "\n",
        "        ...,\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157]],\n",
        "\n",
-       "        [[1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
+       "        [[0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
        "         ...,\n",
-       "         [1.        ],\n",
-       "         [1.        ],\n",
-       "         [1.        ]]]])"
+       "         [0.00392157],\n",
+       "         [0.00392157],\n",
+       "         [0.00392157]]]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
        "(7368, 100, 100, 1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,12 +642,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Guardar los datos\n",
-    "np.savez('../X_y_data.npz', \n",
+    "np.savez('../X_y_clean.npz', \n",
     "         X=X, \n",
     "         y=y)"
    ]
