--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -646,7 +646,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Guardar los datos\n",
+    "# Saving the clean data\n",
     "np.savez('../X_y_clean.npz', \n",
     "         X=X, \n",
     "         y=y)"
