Error manage update

--- a/real-time class.ipynb
+++ b/real-time class.ipynb
@@ -143,7 +143,7 @@
     "while True:\n",
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
-    "        print(\"Error: Cannot receive frame (stream end?). Exiting ...\")\n",
+    "        print(\"Error: Cannot receive frame\")\n",
     "        break\n",
     "    frame = cv2.flip(frame, 1)\n",
     "\n",
