--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Remove duplicates\n",
+    "#### Handle missing values\n",
+    "#### Normalize data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
