--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -22,14 +22,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries\n",
+    "\n",
     "import numpy as np\n",
     "import os, cv2\n",
     "import re, random\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import tensorflow as tf\n",
-    "\n",
-    "# Cleaning started"
+    "import tensorflow as tf"
    ]
   },
   {
