Starting Normalizing Data

--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing libraries\n",
+    "# Importing library\n",
     "\n",
     "import numpy as np\n",
     "import os, cv2\n",
