--- a/modelCNN.ipynb
+++ b/modelCNN.ipynb
@@ -11,7 +11,7 @@
     "import re, random\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import tensorflow as tf\n"
+    "import tensorflow as tf"
    ]
   },
   {
