Data Cleaning end - David

--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -17,19 +17,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing library\n",
+    "# First, it is required to imports necessary libraries for data processing, visualization, and TensorFlow operations.\n",
     "\n",
-    "import numpy as np\n",
-    "import os, cv2\n",
-    "import re, random\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import tensorflow as tf"
+    "import numpy as np  # For numerical operations\n",
+    "import os, cv2  # For handling file paths and image processing\n",
+    "import re, random   # For regular expressions and random operations\n",
+    "import matplotlib.pyplot as plt   # For plotting graphs\n",
+    "import seaborn as sns  # For data visualization\n",
+    "import tensorflow as tf  # For building and training neural networks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Column and Label Definitions"
    ]
   },
   {
@@ -300,6 +314,13 @@
    "source": [
     "from sklearn.utils import shuffle\n",
     "X, y = shuffle(X, y, random_state=42) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Normalizing Image Data"
    ]
   },
   {
@@ -625,8 +646,17 @@
     }
    ],
    "source": [
-    "X = np.array(X).astype(float)/255\n",
-    "X"
+    "# Normalizes the image data by scaling pixel values to the range [0, 1].\n",
+    "\n",
+    "X = np.array(X).astype(float)/255  # Converting pixel values to float and normalizing to range [0, 1]\n",
+    "X   # Display the normalized image data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Converting Labels to Numpy Array"
    ]
   },
   {
@@ -635,7 +665,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = np.array(y)"
+    "# Converting labels to numpy array\n",
+    "y = np.array(y)   # Convert labels to numpy array for compatibility with MLM "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Shape Check"
    ]
   },
   {
@@ -655,7 +693,15 @@
     }
    ],
    "source": [
+    "# Checking the shape of the image data\n",
     "X.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Data Saving"
    ]
   },
   {
@@ -665,7 +711,7 @@
    "outputs": [],
    "source": [
     "# Saving the clean data\n",
-    "np.savez('../X_y_clean.npz', \n",
+    "np.savez('../X_y_clean.npz',   # Save the arrays X and y to a compressed .npz file\n",
     "         X=X, \n",
     "         y=y)"
    ]
