--- a/real-time class.ipynb
+++ b/real-time class.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mapeo de índices a etiquetas de clases\n",
+    "# Mapping of indices to class labels\n",
     "class_labels = {\n",
     "    0: 'Apple Healthy', 1: 'Apple Rotten', 2: 'Banana Healthy', 3: 'Banana Rotten',\n",
     "    4: 'Bellpepper Healthy', 5: 'Bellpepper Rotten', 6: 'Carrot Healthy', 7: 'Carrot Rotten',\n",
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DataFrame para almacenar los resultados\n",
+    "# DataFrame to store the results\n",
     "results_df = pd.DataFrame(columns=['file_name'])"
    ]
   },
@@ -111,7 +111,7 @@
    "source": [
     "def preprocess_image(frame):\n",
     "    gray_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "    resized_frame = cv2.resize(gray_frame, (98, 98))  # Ensure this matches the input size of your model\n",
+    "    resized_frame = cv2.resize(gray_frame, (98, 98))\n",
     "    image_array = img_to_array(resized_frame)\n",
     "    image_array = np.expand_dims(image_array, axis=-1)  # Shape (98, 98, 1)\n",
     "    image_array = np.expand_dims(image_array, axis=0)  # Shape (1, 98, 98, 1)\n",
