--- a/modelCNN.ipynb
+++ b/modelCNN.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mid-Point Submission (Group 5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -15,10 +22,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.load('data/train_test_data.npz')\n",
+    "X_train = data['X_train']\n",
+    "X_test = data['X_test']\n",
+    "y_train = data['y_train']\n",
+    "y_test = data['y_test']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.load('../X_y_clean.npz')\n",
+    "X = data['X']\n",
+    "y = data['y']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Building. Mid-Point Submission (Group 5)"
+    "## Model Normal CNN Building"
    ]
   },
   {
@@ -56,39 +87,6 @@
     "model_CNN.compile(optimizer='adam',\n",
     "                loss='sparse_categorical_crossentropy',\n",
     "                metrics=['accuracy'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_CNN.compile(optimizer='adam',\n",
-    "                loss='sparse_categorical_crossentropy',\n",
-    "                metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.keras.callbacks import TensorBoard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TensorBoardCNN = TensorBoard(log_dir='logs/CNN')\n",
-    "model_CNN.fit(X,y, batch_size= 32,\n",
-    "              validation_split=0.15,\n",
-    "              epochs=100,\n",
-    "              callbacks=[TensorBoardCNN])"
    ]
   },
   {
@@ -155,6 +153,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model CNN data Augmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -184,33 +189,6 @@
     "modelCNN_DA.compile(optimizer='adam',\n",
     "                    loss='sparse_categorical_crossentropy',\n",
     "                    metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_size = int(len(X) * 0.85)\n",
-    "\n",
-    "X_train = X[:train_size]\n",
-    "X_test = X[train_size:]\n",
-    "\n",
-    "y_train = y[:train_size]\n",
-    "y_test = y[train_size:]\n",
-    "\n",
-    "print(f\"Training set size: {len(X_train)}\")\n",
-    "print(f\"Test set size: {len(X_test)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(y_train)"
    ]
   },
   {
