--- a/dataPreprocessingFeatureEng.ipynb
+++ b/dataPreprocessingFeatureEng.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Cleaning. Mid-Point Submission (Group 5)"
+    "## Data preprocessiong. Mid-Point Submission (Group 5)"
    ]
   },
   {
@@ -714,6 +714,150 @@
     "np.savez('../X_y_clean.npz',   # Save the arrays X and y to a compressed .npz file\n",
     "         X=X, \n",
     "         y=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "datagen = ImageDataGenerator(\n",
+    "    rotation_range=30,\n",
+    "    width_shift_range=0.2,\n",
+    "    height_shift_range=0.2,\n",
+    "    shear_range=15,\n",
+    "    zoom_range=[0.7, 1.4],\n",
+    "    horizontal_flip=True,\n",
+    "    vertical_flip=True\n",
+    ")\n",
+    "\n",
+    "datagen.fit(X)\n",
+    "\n",
+    "plt.figure(figsize=(20,8))\n",
+    "\n",
+    "for imagen, etiqueta in datagen.flow(X, y, batch_size=10, shuffle=False):\n",
+    "  for i in range(10):\n",
+    "    plt.subplot(2, 5, i+1)\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "    plt.imshow(imagen[i].reshape(100, 100), cmap=\"gray\")\n",
+    "  break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_size = int(len(X) * 0.80)\n",
+    "\n",
+    "X_train = X[:train_size]\n",
+    "X_test = X[train_size:]\n",
+    "\n",
+    "y_train = y[:train_size]\n",
+    "y_test = y[train_size:]\n",
+    "\n",
+    "print(f\"Training set size: {len(X_train)}\")\n",
+    "print(f\"Test set size: {len(X_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savez('../train_test_data.npz', \n",
+    "         X_train=X_train, \n",
+    "         X_test=X_test, \n",
+    "         y_train=y_train, \n",
+    "         y_test=y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelCNN_DA = tf.keras.models.Sequential([\n",
+    "  tf.keras.layers.Conv2D(32, (3,3), activation='relu', input_shape=(100, 100, 1)),\n",
+    "  tf.keras.layers.MaxPooling2D(2, 2),\n",
+    "  tf.keras.layers.Conv2D(64, (3,3), activation='relu'),\n",
+    "  tf.keras.layers.MaxPooling2D(2, 2),\n",
+    "  tf.keras.layers.Conv2D(128, (3,3), activation='relu'),\n",
+    "  tf.keras.layers.MaxPooling2D(2, 2),\n",
+    "\n",
+    "  tf.keras.layers.Dropout(0.5),\n",
+    "  tf.keras.layers.Flatten(),\n",
+    "  tf.keras.layers.Dense(250, activation='relu'),\n",
+    "  tf.keras.layers.Dense(3, activation='softmax')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelCNN_DA.compile(optimizer='adam',\n",
+    "                    loss='sparse_categorical_crossentropy',\n",
+    "                    metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_gen_trainning = datagen.flow(X_train, y_train, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.callbacks import TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TensorBoardCNN_DA = TensorBoard(log_dir='logs/CNN_DA', histogram_freq=1)\n",
+    "modelCNN_DA.fit(data_gen_trainning, batch_size= 32, epochs=100,\n",
+    "              validation_data = (X_test, y_test),\n",
+    "              steps_per_epoch =int(np.ceil(len(X_train)/float(32))),\n",
+    "              validation_steps =int(np.ceil(len(X_test)/float(32))),\n",
+    "              callbacks=[TensorBoardCNN_DA])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%tensorboard --logdir logs"
    ]
   }
  ],
